# bevy_modal_editor

./: CLAUDE.md  Cargo.toml  README.md
assets/effects/: Skill Impact.fx.ron  Skill Muzzle.fx.ron
assets/vfx/: blizzard_frost.vfx.ron  firebolt_trail.vfx.ron
crates/bevy_editor_game/: Cargo.toml
crates/bevy_editor_game/src/: lib.rs  scene_types.rs
crates/bevy_effect/: Cargo.toml
crates/bevy_effect/src/: data.rs  gltf.rs  lib.rs  loader.rs  presets.rs  primitive.rs  runtime.rs  tests.rs
crates/bevy_vfx/src/: data.rs  lib.rs  mesh_particles.rs
crates/bevy_vfx/src/gpu/: extract.rs  prepare.rs
src/: constants.rs  lib.rs
src/editor/: input.rs  plugin.rs  state.rs
src/effects/: mod.rs  tests.rs
src/prefabs/: spawn.rs
src/scene/: gltf_source.rs  mod.rs  primitives.rs
src/skill/: cue_slots.rs  edits.rs  library.rs  mod.rs  proxies.rs  readouts.rs  save.rs  templates.rs  validation.rs
src/skill/panel/: behavior.rs  chips.rs  mod.rs  presentation.rs  rules.rs  strip.rs
src/skill/preview/: charge.rs  cosmetics.rs  decal_material.rs  mod.rs  rig.rs  scrub.rs  sockets.rs  stage.rs  surfaces.rs  vfx_bake.rs
src/ui/: effect_editor.rs  mod.rs  panels.rs  prefab_preview.rs  skill_editor.rs  vfx_editor.rs
src/ui/command_palette/: asset_browser.rs  mod.rs  skill_preset.rs
src/vfx/: mod.rs
tests/: effect_marker_scene_fixture.rs  skill_preview.rs  skill_proxies.rs  skill_scrub.rs
tests/fixtures/: effect_marker_scene.ron
