[workspace]
resolver = "2"
members = [".", "crates/bevy_outliner", "crates/bevy_spline_3d", "crates/bevy_grid_shader", "crates/bevy_channel_mat", "crates/bevy_editor_game", "crates/bevy_procedural", "crates/bevy_vfx", "crates/bevy_effect", "crates/marble_demo", "crates/ai_demo"]
# fp_demo depends on bevy_locomotion via an absolute path into /home/zach/…,
# which breaks manifest loading for the entire workspace on other machines.
# Excluded until that dependency is made portable (git or relative path).
exclude = ["crates/fp_demo"]

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nub/bevy_modal_editor"

[workspace.dependencies]
bevy = { version = "0.18", features = ["file_watcher", "embedded_watcher", "reflect_documentation", "pbr_clustered_decals", "bevy_remote"] }
avian3d = { version = "0.5", default-features = true, features = ["debug-plugin"] }
bevy_egui = { git = "https://github.com/vladbat00/bevy_egui", rev = "81904dac9a09d49563e39962bf3039afc47016dc" } # pinned: last Bevy-0.18-compatible bevy_egui (main moved to 0.19); grafted from LukeThayer/main 4113492
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
bytemuck = { version = "1.0", features = ["derive"] }
bitflags = "2.6"
bevy_outliner = { path = "crates/bevy_outliner" }
bevy_spline_3d = { path = "crates/bevy_spline_3d" }
bevy_grid_shader = { path = "crates/bevy_grid_shader" }
bevy_channel_mat = { path = "crates/bevy_channel_mat" }
bevy_editor_game = { path = "crates/bevy_editor_game" }
bevy_procedural = { path = "crates/bevy_procedural" }
bevy_vfx = { path = "crates/bevy_vfx" }
bevy_effect = { path = "crates/bevy_effect" }
bevy_rerecast = "0.4"
avian_rerecast = "0.4"
bevy_landmass = "0.11"
landmass_rerecast = "0.2"
fastrand = "2.0"

[package]
name = "bevy_modal_editor"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "A modal level editor plugin for Bevy games with Avian3D physics support"
repository.workspace = true
keywords = ["bevy", "editor", "modal", "level-editor", "avian3d"]
categories = ["game-development", "game-engines"]

[lib]
name = "bevy_modal_editor"
path = "src/lib.rs"

[[bin]]
name = "bevy_modal_editor"
path = "src/main.rs"

[dependencies]
bevy.workspace = true
avian3d.workspace = true
bevy_egui.workspace = true
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy_spline_3d.workspace = true
bevy_outliner.workspace = true
bevy_grid_shader.workspace = true
bevy_channel_mat.workspace = true
bevy_editor_game.workspace = true
bevy_procedural.workspace = true
bevy_vfx.workspace = true
bevy_effect.workspace = true
bevy_rerecast.workspace = true
avian_rerecast.workspace = true
bevy_landmass.workspace = true
landmass_rerecast.workspace = true
serde.workspace = true
ron.workspace = true
dirs = "6"
fuzzy-matcher = "0.3"
egui_commonmark = "0.22"
bevy_gaussian_splatting = { git = "https://github.com/Nub/bevy_gaussian_splatting.git", branch = "main", default-features = false, features = ["planar", "io_ply", "io_flexbuffers", "buffer_storage", "sort_rayon"] }
# Optional: obelisk-bevy integration (Skill mode). Pinned to the current tip of
# `main` at the time this dependency was added — bump the rev deliberately when
# picking up upstream changes.
# `test-support` (additive to the crate's own `default = ["present"]`) unlocks
# `obelisk_bevy::testkit` (`EventRecorder`/`EventRecorderPlugin`/`init_test_obelisk`) —
# Task 10's headless preview-stage tests assert on the sim's real event stream the same
# way obelisk-bevy's own suite does.
obelisk-bevy = { git = "https://github.com/LukeThayer/bevy-obelisk", branch = "main", optional = true, features = ["test-support"] } # branch=main (57662ef) to unify with obelisk-arena's obelisk-bevy pin (no skew)
# stat_core is a transitive dep of obelisk-bevy (same git+rev — Cargo dedupes it to one
# instance, so `stat_core::Skill` here IS the same type obelisk-bevy's rules pipeline
# consumes). Pinned to the exact rev obelisk-bevy @ ebbecc2a resolves against (see the
# `stat_core` entry in Cargo.lock) — bump only in lockstep with the obelisk-bevy rev above.
stat_core = { git = "ssh://git@github.com/vothuul/obelisk.git", rev = "bf9f026", optional = true }
# loot_core is a sibling crate in the same repo/rev as stat_core (transitive dep already, per
# Cargo.lock) — declared directly here (Task 6) so the editor can reach its `EnumVariants` trait
# (`stat_core` uses it internally for `ApplicationTarget`/`DamageType`/etc. but doesn't
# re-export it) for the Rules region's dropdown pickers. Same git+rev as stat_core; Cargo dedupes
# it to the one instance stat_core's own types already implement the trait against.
loot_core = { git = "ssh://git@github.com/vothuul/obelisk.git", rev = "bf9f026", optional = true }
# TOML (de)serialization for `config/skills/*.toml` content-root files (stat_core's own
# `config::parse_skills` takes a `&str`, so the editor does its own file I/O + toml parse).
toml = { version = "0.8", optional = true }
# Format-preserving TOML editing (Task 8's `save_skill`): patches only the editor-owned fields
# of an existing rules TOML in place, leaving comments/order/every other field untouched. Pinned
# to 0.22 to match the version `toml 0.8` already resolves (see Cargo.lock) — no duplicate copy.
toml_edit = { version = "0.22", optional = true }
# ChaCha8Rng reseed for the preview stage's deterministic reset (`SpawnRng`, the emitter-jitter
# stream). Same versions obelisk-bevy declares (rand 0.8 / rand_chacha 0.3) so Cargo dedupes to the
# ONE instance whose `ChaCha8Rng` IS `SpawnRng`'s field type — a mismatched major would not unify.
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }


[dev-dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }

[features]
default = []
dynamic = ["bevy/dynamic_linking"]
# Enables EditorMode::Skill (K key, right panel) and the obelisk-bevy integration.
obelisk = ["dep:obelisk-bevy", "dep:stat_core", "dep:loot_core", "dep:toml", "dep:toml_edit", "dep:rand", "dep:rand_chacha"]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "with_existing_scene"
path = "examples/with_existing_scene.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
bevy_egui = { git = "https://github.com/vladbat00/bevy_egui", rev = "81904dac9a09d49563e39962bf3039afc47016dc" } # pinned: last Bevy-0.18-compatible bevy_egui (main moved to 0.19); grafted from LukeThayer/main 4113492
