[package]
name = "bevy_editor_game"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
bevy.workspace = true
bevy_egui = { workspace = true, optional = true }
bevy_effect = { path = "../bevy_effect" }
serde.workspace = true
ron.workspace = true

[features]
# egui-dependent items (inspector widget fn types on CustomEntityType). On by default for the
# editor; headless game consumers (e.g. obelisk-arena's level loader) build with
# `default-features = false` to avoid pulling egui.
default = ["egui"]
egui = ["dep:bevy_egui"]
